2015-07-30 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config/ipmi-config-category-dcmi-dcmi-conf-section.c (asset_tag_commit):
	Revert workaround for Supermicro motherboard.

2015-07-27 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config/ipmi-config-category-dcmi-dcmi-conf-section.c (asset_tag_commit):
	Add workaround for Supermicro motherboard.
	
2015-07-27 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-chassis-boot-flags.c (_get_boot_flags):
	Fix debug message output error.
	
2015-06-01  Albert Chu <chu11@llnl.gov>

	* NEWS, configure.ac: Update for release.

	* Tagged Release-1_4_9

2015-06-01 Albert Chu <chu11@llnl.gov>

	* Audit and fix all strtol parse corner cases.

2015-06-01 James Buren <ryu0@ymail.com>

	* ipmi-config/ipmi-config-argp.c (_ipmi_config_parse_channel_number):
	Fix strtol parse corner case.
	
2015-04-02 Albert Chu <chu11@llnl.gov>

	* man/ipmiconsole.8.pre.in: Remove duplicate information.  (bug
	#44698)
	
2015-01-07  Albert Chu <chu11@llnl.gov>

	* NEWS, configure.ac: Update for release.

	* Tagged Release-1_4_8

	* configure.ac: Increment libfreeipmi version appropriately.

2015-01-06 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/libcommon/ipmi-crypt.c (crypt_init): Only call
	gcry_control w/ GCRYCTL_SET_THREAD_CBS once.  It appears newer
	version of libgcrypt cannot handle entering this function
	simulatenously by multiple threads, leading to segfaults.

2015-01-06 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-cmdline-common.c: Fix parsing corner case
	with --fanout option.

2014-12-10  Albert Chu <chu11@llnl.gov>

	* NEWS, configure.ac: Update for release.

	* Tagged Release-1_4_7

2014-12-10 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-user-sections.c (_set_user_access):
	Workaround issue on Supermicro X10DDW-i.

2014-12-09 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan-conf-section.c: Fix
	vlan_id from uint8_t to uint16_t.
